# pyGraphr

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: algorithms.py  graph.py  main.py  node.py  search_visualizer.py
src/graphs/: graph.txt  graph_dict.txt
src/gui/: color_legend.py  gui_manager.py  heuristics_table.py  theme.json
src/utils/: colors.py  hierarchy_network.py
