[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyGraphr"
description = "A Python Graph Traversal Visualizer for applying search algorithms."
version = "1.3-BETA"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
authors =  [
    {name = "António Raimundo", email = "aslro@iscte-iul.pt"},
]

dependencies = [
    "networkx >= 3.1",
]

[project.scripts] # TO-DO: Add entry point for the CLI
solve = "pygraphr.__main__:main"
