[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyGraphr"
description = "A Python Graph Traversal Visualizer for applying search algorithms."
version = "1.5"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
authors =  [
    {name = "António Raimundo", email = "aslro@iscte-iul.pt"},
]

dependencies = [
    "networkx == 3.4.2",
    "pygame-ce == 2.5.2",
    "numpy == 2.1.3",
    "matplotlib == 3.9.2",
    "scipy == 1.14.1",
    "pygame-gui == 0.6.12",
]

[project.scripts]
pygraphr = "main:main"
